# LadybugTools_Toolkit

./: .gitignore  Generic_Box_Model_W30.html  Generic_Box_Model_W9.html  LadybugTools_Toolkit.sln  README.md  Test.html  Versioning_62.json  build.ps1  dependencies.txt  model.vtkjs  profiler.py
LadybugTools_Engine/Python/: .pylintrc  LadybugTools_Toolkit.json  README.md  Test.ipynb  __init__.py  datacollection.py  enums.py  epw.py  forecast_scenario.py  install_lbt_tk.ps1  jupyter.bat  pyproject.toml  requirements.txt  requirements_src.txt  run_coverage.bat  run_documentation.bat  run_linting.bat  run_tests.bat  setup.py
LadybugTools_Engine/Python/bh_ladybug/: analysisperiod.py  datacollection.py  datacollectionimmutable.py  epw.py  header.py  location.py  new_epw.py
LadybugTools_Engine/Python/datasets/: HADCM3_A2a_DSWF_2020.dif  HADCM3_A2a_DSWF_2050.dif  HADCM3_A2a_DSWF_2080.dif  HADCM3_A2a_MSLP_2020.dif  HADCM3_A2a_PREC_2020.dif  HADCM3_A2a_PREC_2050.dif  HADCM3_A2a_PREC_2080.dif  HADCM3_A2a_RHUM_2020.dif  HADCM3_A2a_RHUM_2050.dif  HADCM3_A2a_RHUM_2080.dif  HADCM3_A2a_TCLW_2020.dif  HADCM3_A2a_TEMP_2020.dif  HADCM3_A2a_TEMP_2050.dif  HADCM3_A2a_TEMP_2080.dif  HADCM3_A2a_TMAX_2020.dif  HADCM3_A2a_TMAX_2050.dif  HADCM3_A2a_TMAX_2080.dif  HADCM3_A2a_TMIN_2020.dif  HADCM3_A2a_TMIN_2050.dif  HADCM3_A2a_TMIN_2080.dif  HADCM3_A2a_WIND_2020.dif  HADCM3_A2a_WIND_2050.dif  HADCM3_A2a_WIND_2080.dif  HADCM3_A2b_DSWF_2020.dif  HADCM3_A2b_DSWF_2050.dif  HADCM3_A2b_DSWF_2080.dif  HADCM3_A2b_MSLP_2050.dif  HADCM3_A2b_MSLP_2080.dif  HADCM3_A2b_PREC_2020.dif  HADCM3_A2b_PREC_2050.dif  (+44 more)
(+1018 files in other folders)
