[project]
name = "ladybugtools_toolkit"
readme = "README.md"
authors = [
    { name = "BHoM", email = "bhombot@burohappold.com" }
]
dynamic = ["version", "description"]
dependencies = [
    "case-converter",
    "dataframe-image",
    "matplotlib",
    "meteostat",
    "numpy",
    "openpyxl",
    "pandas",
    "pyarrow",
    "pyet",
    "scikit-learn",
    "scipy",
    "tables",
    "tqdm",
    "xlrd",
]

[urls]
source = "https://github.com/BHoM/LadybugTools_Toolkit"

[build-system]
requires = ["setuptools", "pywin32"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black",
    "ipykernel>=6.29.5",
    "pylint>=3.3.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-order",
    "sphinx>=8.1.3",
    "sphinx-bootstrap-theme>=0.8.1",
    "sphinxcontrib-fulltoc>=1.2.0",
    "sphinxcontrib-napoleon>=0.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.pytest.ini_options]
pythonpath = "src"
